Fixed navigation z-index issue on front page.

--- a/styles/style.css
+++ b/styles/style.css
@@ -166,7 +166,7 @@
 
 #streetBandit .himSelf {
 	position:absolute;
-	z-index: 1;
+	/* z-index: 1; */
 	margin-left: auto; 
 	margin-right: auto; 
 	left: 0; 
